--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
 
   cupertino_icons: ^0.1.2
   webview_flutter: ^0.3.20
+  url_launcher: ^4.0.2
 
 dev_dependencies:
   flutter_test:
